argocd/auth/vaultwarden/vaultwarden-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: auth
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8096
  selector:
    app: vaultwarden
