argocd/auth/vaultwarden/vaultwarden-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-internal-route
  namespace: auth
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-internal
    namespace: default
  hostnames: ["vault.internal.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: vaultwarden
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden-route
  namespace: auth
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-default
    namespace: default
  hostnames: ["vault.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: vaultwarden
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
